@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.16 2003/10/01 10:41:01 jaco Exp $
+# $Id: CHANGELOG,v 1.17 2003/10/01 12:04:25 jaco Exp $
 
 * Wed, Oct 01, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -28,6 +28,7 @@
       - Added 'make rpm' target for building both the noarch and
         src RPMS
       - Build all targets to DISTDIR
+      - Split variables into Rules.mk
     [README]:
       - Include CVS location
     [hwdetect]:
